samples/_failures_safe/1761092523_a96ef1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_898d4e1f.c: In function ‘main’:
./samples/SAFE/__tmp_898d4e1f.c:154:5: error: expected expression at end of input
  154 |     mat2.cols = read_int("Enter columns for matrix B (1-10): ", 1,
      |     ^~~~
./samples/SAFE/__tmp_898d4e1f.c:154:5: error: expected declaration or statement at end of input
